fixed horizontal scroll throughtout app for better view on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   margin: 0;
   max-width: 100%;
   overflow-x: hidden;
